2024-09-13-create-alb-and-target-group-in-aws-with-terraform/action-in-blog/vpc.tf
resource "aws_vpc" "junhyunny_vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = var.vpc_name
  }
}
